moved tio use popovers on small screen sizes; still some display bugs;

--- a/stayorgo/static/css/bootstrap-custom.css
+++ b/stayorgo/static/css/bootstrap-custom.css
@@ -55,8 +55,8 @@
 
 @media (max-width: 992px){
     .panel-fixed-height{
-    height: 30px;
-}
+        height: 30px;
+    }
 }
 
 .navbar-fixed-bottom {
@@ -67,14 +67,14 @@
 
 .panel-body .panel-fixed-height {
     position: relative;
-    top: 50%
+    top: 50%;
     transform: translateY(-50%);
 }
 
 .btn-sq-xs {
     width: 25px !important;
     height: 25px !important;
-    padding:2px;
+    padding: 2px !important;
 }
 
 
